# cpp-connector-api

./: CMakeLists.txt  README.md  build.sh  create_xcode_project.sh
include/: Meteomatics_ApiClient.h  Meteomatics_Internals.h
src/: meteomatics_main.cpp
